--- a/css/style.css
+++ b/css/style.css
@@ -188,5 +188,5 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
 }
 .home_hero {
   height: 100vh;
-  background-image: url(../images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
+  background-image: url(/images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
 }/*# sourceMappingURL=style.css.map */
