--- a/sass/page_styles/_home.scss
+++ b/sass/page_styles/_home.scss
@@ -1,4 +1,4 @@
 .home_hero{
     height: 100vh;
-    background-image: url(../images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
+    background-image: url(/images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
 }
