--- a/sass/page_styles/_home.scss
+++ b/sass/page_styles/_home.scss
@@ -1,4 +1,13 @@
 .home_hero{
     height: 100vh;
-    background-image: url(/images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
+    width: 100%;
+    background-image: url(../images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
+
+    .home_hero_content{
+        height: 100%;
+        
+    }
+
+   
+
 }
