--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,15 @@
 Fluid Typography Scale
 Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12
 */
+.home_hero {
+  height: 100vh;
+  width: 100%;
+  background-image: url(../images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
+}
+.home_hero .home_hero_content {
+  height: 100%;
+}
+
 .primary_button {
   background-color: transparent;
   border-radius: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
@@ -48,7 +57,7 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
   border: 1px solid #BB0722;
 }
 .primary_button:hover a {
-  color: #BB0722;
+  color: #BB0722 !important;
 }
 .primary_button:hover:after {
   height: 0;
@@ -107,9 +116,9 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
 .primary_button_outline:after {
   content: "";
   position: absolute;
+  border: transparent;
   top: 0;
   left: 0;
-  background-color: #BB0722;
   height: 0;
   width: 100%;
   z-index: -10;
@@ -133,6 +142,7 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
 .primary_button_outline:hover:after {
   height: 180%;
   border-radius: 0 0 50% 50%;
+  background-color: #BB0722;
 }
 
 .secondary_button_outline {
@@ -173,6 +183,7 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
 .secondary_button_outline:hover:after {
   height: 180%;
   border-radius: 0 0 50% 50%;
+  background-color: #130C0C;
 }
 
 @media screen and (max-width: 400px) {
@@ -185,8 +196,4 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
     font-size: clamp(0.66rem, 0.63rem + 0.14vw, 0.75rem);
     font-weight: 500;
   }
-}
-.home_hero {
-  height: 100vh;
-  background-image: url(/images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
 }/*# sourceMappingURL=style.css.map */
