--- a/sass/page_styles/_home.scss
+++ b/sass/page_styles/_home.scss
@@ -2,6 +2,8 @@
     height: 100vh;
     width: 100%;
     background-image: url(../images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
+    // z-index: -2;
+    // position: relative;
 
     .home_hero_content{
         height: 100%;
