--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,59 @@
 Fluid Typography Scale
 Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12
 */
+.container {
+  max-width: 1440px;
+  padding: 0 clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+}
+
 .home_hero {
   height: 100vh;
   width: 100%;
   background-image: url(../images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+.home_hero .home_hero_overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: #DDD9D9;
+  z-index: 0;
+  opacity: 0.8;
 }
 .home_hero .home_hero_content {
-  height: 100%;
+  position: relative;
+  z-index: 4;
+}
+.home_hero .home_hero_content h3 {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(2.07rem, 1.97rem + 0.44vw, 2.37rem);
+  line-height: 120%;
+  color: #BB0722;
+  padding-bottom: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.home_hero .home_hero_content h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(2.18rem, 1.5rem + 3.01vw, 4.21rem);
+  line-height: 105%;
+  color: #130C0C;
+  padding-bottom: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+  text-transform: uppercase;
+}
+.home_hero .home_hero_content p {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #282828;
+  padding-bottom: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+  max-width: 520px;
+  text-align: justify;
 }
 
 .primary_button {
