--- a/sass/page_styles/_home.scss
+++ b/sass/page_styles/_home.scss
@@ -2,14 +2,46 @@
     height: 100vh;
     width: 100%;
     background-image: url(../images/JCNP\ Quantity\ Surveyor_Home\ Banner.jpg);
-    // z-index: -2;
-    // position: relative;
-
-    .home_hero_content{
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    position: relative;
+    // justify-content: center;
+    align-items: center; 
+    .home_hero_overlay{
+        position: absolute;
         height: 100%;
-        
+        width: 100%;
+        top: 0;
+        left: 0;
+        background-color: $light_colour;
+        z-index: 0;
+        opacity: .8;
+    
     }
 
-   
+    .home_hero_content{
+        position: relative;
+        z-index: 4;
+        // max-width: 480px;
+        // background-color: $white_colour;
+        h3{
+            @include heading_3($main_font, $primary_colour);
+            padding-bottom: $space_m_24;
+        }
+        h1{
+            @include heading_1($main_font, $secondary_colour);
+            padding-bottom: $space_l_32;
+            text-transform: uppercase
+
+        }
+        p{
+            @include body_copy($alt_font, $dark_colour);
+            padding-bottom: $space_xl_48;
+            max-width: 520px;
+            text-align: justify;
+        }
+    }
 
 }
