--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
 */
 .container {
   max-width: 1440px;
+  margin: 0 auto;
   padding: 0 clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
 }
 
@@ -45,7 +46,10 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
 }
 .home_hero .home_hero_content {
   position: relative;
-  z-index: 4;
+  z-index: 8;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .home_hero .home_hero_content h3 {
   font-family: "Montserrat", sans-serif;
@@ -74,14 +78,16 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
 
 .home_about_cards {
   display: grid;
+  max-width: 1440px;
 }
 .home_about_cards .home_about_card {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
-  gap: clamp(0.69rem, 0.67rem + 0.09vw, 0.75rem);
+  gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   align-items: flex-start;
+  background-color: #FFFFFF;
   border-bottom: 1px solid #DDD9D9;
 }
 .home_about_cards .home_about_card .card_heading {
@@ -92,17 +98,83 @@ Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5
 }
 .home_about_cards .home_about_card .card_text {
   font-family: "Open Sans", sans-serif;
-  font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
-  line-height: 120%;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
   color: #282828;
 }
 .home_about_cards .card_1 {
   background-color: #130C0C;
+  gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
 }
 .home_about_cards .card_1 .card_text {
   color: #FFFFFF;
 }
 
+.home_services {
+  height: 100vh;
+  width: 100%;
+  background-color: salmon;
+}
+
+@media screen and (min-width: 760px) and (max-width: 1020px) {
+  .home_about_cards {
+    grid-template-columns: repeat(8, 1fr);
+  }
+  .card_1 {
+    grid-column: 1/9;
+  }
+  .card_2 {
+    grid-column: 1/5;
+  }
+  .card_3 {
+    grid-column: 5/9;
+    border-left: 1px solid #DDD9D9;
+  }
+  .card_4 {
+    grid-column: 1/5;
+  }
+  .card_5 {
+    grid-column: 5/9;
+    border-left: 1px solid #DDD9D9;
+  }
+}
+@media screen and (min-width: 1021px) {
+  .home_about {
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    position: relative;
+    z-index: 20;
+  }
+  .home_about_cards {
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(2, 250px);
+  }
+  .card_1 {
+    grid-column: 1/5;
+    grid-row: 1/3;
+  }
+  .card_2 {
+    grid-column: 5/7;
+    grid-row: 1/2;
+  }
+  .card_3 {
+    grid-column: 7/9;
+    grid-row: 1/2;
+    border-right: 1px solid #DDD9D9;
+    border-left: 1px solid #DDD9D9;
+  }
+  .card_4 {
+    grid-column: 5/7;
+    grid-row: 2/3;
+  }
+  .card_5 {
+    grid-column: 7/9;
+    grid-row: 2/3;
+    border-right: 1px solid #DDD9D9;
+    border-left: 1px solid #DDD9D9;
+  }
+}
 .primary_button {
   background-color: transparent;
   border-radius: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
