--- a/sass/page_styles/_home.scss
+++ b/sass/page_styles/_home.scss
@@ -23,7 +23,11 @@
 
     .home_hero_content{
         position: relative;
-        z-index: 4;
+        z-index: 8;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        
         // max-width: 480px;
         // background-color: $white_colour;
         h3{
@@ -48,28 +52,123 @@
 
 .home_about_cards{
     display: grid;
+    // grid-template-columns: repeat(8, 1fr);
+    max-width: 1440px;
 
     .home_about_card{
         display: flex;
         flex-direction: column;
         justify-content: center;
         padding: $space_l_32;
-        gap: $space_xs_12;
+        gap: $space_s_16;
         align-items: flex-start;
+        background-color: $white_colour;
        
         border-bottom: 1px solid $light_colour;
         .card_heading{
             @include heading_3($main_font, $primary_colour)
         }
         .card_text{
-            @include heading_5($alt_font, $dark_colour)
+            @include body_copy($alt_font, $dark_colour)
         }
     }
     .card_1{
         background-color: $secondary_colour;
+        gap: $space_l_32;
+        
         .card_text{
             color: $white_colour;
         }
     }
     
+}
+
+.home_services{
+    height: 100vh;
+    width: 100%;
+    background-color: salmon;
+}
+
+
+
+
+
+
+
+
+
+
+//Media Queries
+@media screen and (min-width: 760px) and (max-width: 1020px){
+
+    .home_about_cards{
+        grid-template-columns: repeat(8, 1fr);  
+    }
+
+    .card_1{
+        grid-column: 1 / 9;
+        
+    }
+    .card_2{
+        grid-column: 1 / 5;
+    }
+    .card_3{
+        grid-column: 5 / 9;
+        border-left: 1px solid $light_colour;
+    }
+    .card_4{
+        grid-column:  1 / 5 ;
+    }
+    .card_5{
+        grid-column: 5 / 9;
+        border-left: 1px solid $light_colour;
+    }
+
+}
+
+
+@media screen and (min-width: 1021px){
+    .home_about{
+        display: flex !important;
+        flex-direction: column !important;
+        // justify-content: center !important;
+        align-items: center !important;
+        // margin-top: -120px ;
+        position: relative;
+        z-index: 20;
+        // padding: 0 $space_xl_48;
+
+    }
+    .home_about_cards{
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: repeat( 2, 250px);  
+    }
+
+    .card_1{
+        grid-column: 1 / 5;
+        grid-row: 1 / 3;
+        
+    }
+    .card_2{
+        grid-column: 5 / 7;
+        grid-row: 1 / 2;
+
+    }
+    .card_3{
+        grid-column: 7 / 9;
+        grid-row: 1 / 2;
+        border-right: 1px solid $light_colour;
+        border-left: 1px solid $light_colour;
+    }
+    .card_4{
+        grid-column:  5 / 7;
+        grid-row: 2/ 3;
+    }
+    .card_5{
+        grid-column: 7 / 9;
+        grid-row: 2 / 3;
+        border-right: 1px solid $light_colour;
+        border-left: 1px solid $light_colour;
+    }
+
 }
