--- a/sass/Variables/_typography.scss
+++ b/sass/Variables/_typography.scss
@@ -1,6 +1,8 @@
 /*
 Fluid Typography Scale
 Generated from https://utopia.fyi/type/calculator?c=360,14,1.333,1440,16,1.333,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12
+together with
+https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5%7C0.25,1.5%7C2%7C3%7C4%7C6,s-l&g=s,l,xl,12
 */
 
 @mixin heading_1($font_family, $font_color){
