--- a/sass/page_styles/_home.scss
+++ b/sass/page_styles/_home.scss
@@ -5,9 +5,8 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    display: flex;
     position: relative;
-    // justify-content: center;
+    
     align-items: center; 
     .home_hero_overlay{
         position: absolute;
@@ -26,7 +25,7 @@
         z-index: 8;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        justify-content: center;
         
         // max-width: 480px;
         // background-color: $white_colour;
@@ -86,7 +85,14 @@
 .home_services{
     height: 100vh;
     width: 100%;
-    background-color: salmon;
+    padding-top: $space_xl_48;
+    // background-color: salmon;
+    
+    .home_services_container{
+        h3{
+            @include heading_4($main_font, $primary_colour)
+        }
+    }
 }
 
 
