--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,9 @@ together with
 https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5%7C0.25,1.5%7C2%7C3%7C4%7C6,s-l&g=s,l,xl,12
 */
 .container {
-  width: clamp(250px, 99vw, 1440px);
+  width: clamp(250px, 90vw, 1440px);
   height: 100%;
   margin: 0 auto;
-  padding: 0 48px;
 }
 
 .home_hero {
@@ -93,7 +92,7 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+  padding: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
   gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   align-items: flex-start;
   background-color: #FFFFFF;
@@ -110,6 +109,7 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   line-height: 145%;
   color: #282828;
+  text-align: justify;
 }
 .home_about_cards .card_1 {
   background-color: #130C0C;
@@ -119,19 +119,48 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   color: #FFFFFF;
 }
 
-.home_services {
+.home_service {
   height: 100vh;
   width: 100%;
-  padding-top: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+  padding-top: clamp(3.5rem, 3.33rem + 0.74vw, 4rem);
 }
-.home_services .home_services_container h3 {
+.home_service .home_service_container h3 {
   font-family: "Montserrat", sans-serif;
   font-size: clamp(1.56rem, 1.48rem + 0.33vw, 1.78rem);
   line-height: 120%;
+  color: #130C0C;
+  text-transform: uppercase;
+  padding-bottom: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+}
+.home_service .home_service_container .home_service_cards {
+  display: grid;
+  gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+}
+.home_service .home_service_container .home_service_cards .home_service_card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+}
+.home_service .home_service_container .home_service_cards .home_service_card .home_service_card_image {
+  width: 100%;
+}
+.home_service .home_service_container .home_service_cards .home_service_card .home_service_card_heading {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(1.17rem, 1.11rem + 0.25vw, 1.33rem);
+  line-height: 120%;
   color: #BB0722;
+  max-width: 360px;
+}
+.home_service .home_service_container .home_service_cards .home_service_card .home_service_card_text {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #282828;
+  text-align: justify;
 }
 
-@media screen and (min-width: 760px) and (max-width: 1020px) {
+@media screen and (min-width: 800px) and (max-width: 1020px) {
   .home_about_cards {
     grid-template-columns: repeat(8, 1fr);
   }
@@ -151,6 +180,21 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   .card_5 {
     grid-column: 5/9;
     border-left: 1px solid #DDD9D9;
+  }
+  .home_service_cards {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .home_service_cards .service_card_1 {
+    grid-column: 1/3;
+  }
+  .home_service_cards .service_card_2 {
+    grid-column: 3/5;
+  }
+  .home_service_cards .service_card_3 {
+    grid-column: 1/3;
+  }
+  .home_service_cards .service_card_4 {
+    grid-column: 3/5;
   }
 }
 @media screen and (min-width: 1021px) {
@@ -188,6 +232,22 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
     grid-row: 2/3;
     border-right: 1px solid #DDD9D9;
     border-left: 1px solid #DDD9D9;
+  }
+  .home_service_cards {
+    grid-template-columns: repeat(4, 1fr);
+    gap: clamp(3.5rem, 3.33rem + 0.74vw, 4rem);
+  }
+  .home_service_cards .service_card_1 {
+    grid-column: 1/3;
+  }
+  .home_service_cards .service_card_2 {
+    grid-column: 3/5;
+  }
+  .home_service_cards .service_card_3 {
+    grid-column: 1/3;
+  }
+  .home_service_cards .service_card_4 {
+    grid-column: 3/5;
   }
 }
 .primary_button {
@@ -367,6 +427,6 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
 }
 @media screen and (max-width: 480px) {
   .container {
-    padding: 0 clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+    padding: 0 clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   }
 }/*# sourceMappingURL=style.css.map */
