--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,10 +27,10 @@
 //Importing Components
 
 .container{
-    width: clamp(250px, 99vw, 1440px);
+    width: clamp(250px, 90vw, 1440px);
     height: 100%;
     margin: 0 auto;
-    padding: 0 48px;
+    
     // background-color: salmon;
     
    
@@ -52,6 +52,6 @@
 
 @media screen and (max-width: 480px){
     .container{
-        padding:  0 $space_l_32;
+        padding:  0 $space_s_16;
     }
 }
