--- a/sass/Variables/_variables.scss
+++ b/sass/Variables/_variables.scss
@@ -1,8 +1,8 @@
 
 
 //Colours
-$primary_colour : #BB0722;
-$secondary_colour :#130C0C;
+$primary_colour : #bb0722;
+$secondary_colour :#130c0c;
 $dark_colour :#282828;
 $light_colour :#DDD9D9; 
 $white_colour :#FFFFFF; 
