--- a/sass/page_styles/_home.scss
+++ b/sass/page_styles/_home.scss
@@ -49,6 +49,7 @@
 
 }
 
+/*-------------------------HOME ABOUT SECTION---------------------*/
 .home_about_cards{
     display: grid;
     // grid-template-columns: repeat(8, 1fr);
@@ -84,11 +85,15 @@
     
 }
 
+/*-------------------------HOME SERVICES SECTION---------------------*/
 .home_service{
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     padding-top: $space_xxl_64;
-    // background-color: salmon;
+    padding-bottom: $space_xxl_64;
+    
+   
+   
     
     .home_service_container{
         h3{
@@ -99,7 +104,7 @@
 
         .home_service_cards{
             display: grid;
-            gap: $space_l_32;
+            gap: $space_xl_48;
 
             .home_service_card{
                 display: flex;
@@ -128,6 +133,87 @@
     }
 }
 
+/*-------------------------HOME VALUES SECTION---------------------*/
+.home_profile{
+    min-height: 100vh;
+    width: 100%;
+    .home_profile_left{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+        gap: $space_l_32;
+        height: 60vh;
+        padding : 0 $space_s_16 ;
+        background-image: url(/images/The-role-of-the-quantity-surveyor_1.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        
+
+        .home_profile_left_caption{
+            @include heading_5($main_font, $white_colour);
+            text-transform: uppercase;
+            max-width: 320px;
+            // font-family: 700;
+        }
+
+        .home_profile_left_heading{
+            @include heading_3($main_font, $primary_colour);
+
+        }
+        .home_profile_left_text{
+            @include body_copy($main_font, $white_colour);
+            max-width: 360px;
+        }
+        .home_profile_cta{
+            display: flex;
+            flex-direction: row;
+        }
+    }
+
+    .home_profile_right{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+        gap: $space_l_32;
+        height: 60vh;
+        padding : 0 $space_s_16 ;
+        background-image: url(/images/JCNP_home_profile_right.jpg);
+        background-position: top;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+
+        .home_profile_right_caption{
+            @include heading_3($main_font, $white_colour)
+        }
+        .home_profile_right_text{
+            @include body_copy($main_font, $white_colour)
+        }
+        .home_profile_pillars{
+            li{
+                display: flex;
+                flex-direction: row;
+                gap: $space_l_32;
+                padding-bottom: $space_m_24;
+                
+                p{
+                    @include heading_5($main_font, $white_colour)
+                }
+                .fa-solid{
+                    color: white;
+                    font-size: $space_l_32;
+
+                }
+            }
+        }
+    }
+    
+
+}
 
 
 
@@ -192,10 +278,7 @@
         flex-direction: column !important;
         // justify-content: center !important;
         align-items: center !important;
-        // margin-top: -120px ;
-        position: relative;
-        z-index: 20;
-        // padding: 0 $space_xl_48;
+        
 
     }
     .home_about_cards{
@@ -247,7 +330,23 @@
         .service_card_4{
             grid-column: 3/5 ;
         }
+
        
+    }
+
+    .home_profile{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr );
+        height: 70vh;
+
+        .home_profile_left{
+            grid-column: 1/3 ;
+            padding:  0 $space_xxl_64;
+        }
+        .home_profile_right{
+            grid-column: 3/5 ;
+            padding:  0 $space_xxl_64;
+        }
     }
 
 }
