--- a/sass/page_styles/_home.scss
+++ b/sass/page_styles/_home.scss
@@ -145,7 +145,7 @@
         gap: $space_l_32;
         height: 60vh;
         padding : 0 $space_s_16 ;
-        background-image: url(/images/The-role-of-the-quantity-surveyor_1.jpg);
+        background-image: url(../images/The-role-of-the-quantity-surveyor_1.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -181,7 +181,7 @@
         gap: $space_l_32;
         height: 60vh;
         padding : 0 $space_s_16 ;
-        background-image: url(/images/JCNP_home_profile_right.jpg);
+        background-image: url(../images/JCNP_home_profile_right.jpg);
         background-position: top;
         background-repeat: no-repeat;
         background-size: cover;
