Home pillar bugs fixed

--- a/css/style.css
+++ b/css/style.css
@@ -172,9 +172,9 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: 100%;
   gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
-  height: 60vh;
-  padding: 0 clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  padding: clamp(2.63rem, 2.5rem + 0.56vw, 3rem) clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   background-image: url(../images/The-role-of-the-quantity-surveyor_1.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -210,9 +210,9 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: 100%;
   gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
-  height: 60vh;
-  padding: 0 clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  padding: clamp(2.63rem, 2.5rem + 0.56vw, 3rem) clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
   background-image: url(../images/JCNP_home_profile_right.jpg);
   background-position: top;
   background-repeat: no-repeat;
@@ -338,7 +338,6 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   .home_profile {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    height: 70vh;
   }
   .home_profile .home_profile_left {
     grid-column: 1/3;
