--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   height: 100%;
   gap: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
   padding: clamp(2.63rem, 2.5rem + 0.56vw, 3rem) clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
-  background-image: url(../images/The-role-of-the-quantity-surveyor_1.jpg);
+  background-image: url(../images/JCNP_Home_Profile_Left.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -384,6 +384,78 @@ https://utopia.fyi/type/calculator/?c=360,14,1.2,1440,16,1.333,5,2,&s=0.75%7C0.5
   .home_profile .home_profile_right {
     grid-column: 3/5;
     padding: 0 clamp(3.5rem, 3.33rem + 0.74vw, 4rem);
+  }
+}
+.page_banner {
+  height: 70vh;
+  width: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.page_banner .page_banner_overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #FFFFFF;
+  opacity: 0.7;
+}
+.page_banner .page_banner_heading {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(2.18rem, 1.5rem + 3.01vw, 4.21rem);
+  line-height: 105%;
+  color: #bb0722;
+  position: relative;
+  z-index: 5;
+  text-transform: uppercase;
+}
+
+.about_banner {
+  background-image: url(../images/JCNP_About_Us_Banner.jpg);
+}
+
+/*-------SECTION ONE----------*/
+.about_section_1 {
+  padding: clamp(3.5rem, 3.33rem + 0.74vw, 4rem) 0;
+  display: grid;
+}
+.about_section_1 .about_section_1_left .about_section_1_left_caption {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(1.56rem, 1.48rem + 0.33vw, 1.78rem);
+  line-height: 120%;
+  color: #bb0722;
+  padding-bottom: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+  text-align: center;
+  text-transform: uppercase;
+}
+.about_section_1 .about_section_1_left .about_section_1_left_caption span {
+  color: #130c0c;
+}
+.about_section_1 .about_section_1_left .about_section_1_left_text {
+  font-family: "Open Sans", sans-serif;
+  font-size: clamp(0.88rem, 0.83rem + 0.19vw, 1rem);
+  line-height: 145%;
+  color: #282828;
+  text-align: justify;
+  padding-bottom: clamp(1.75rem, 1.67rem + 0.37vw, 2rem);
+}
+.about_section_1 .about_section_1_right img {
+  width: 100%;
+}
+
+@media screen and (min-width: 1021px) {
+  .about_section_1 {
+    grid-template-columns: 55% 45%;
+    gap: clamp(2.63rem, 2.5rem + 0.56vw, 3rem);
+  }
+  .about_section_1 .about_section_1_left_caption {
+    text-align: left !important;
   }
 }
 .primary_button {
